# NACE.jl

./: .JuliaFormatter.toml  .gitignore  Project.toml  README.md  pyproject.toml
experiments/: experiment01.jl  experiment02.jl
nace/: __main__.py  hypothesis.py  nace.py  plotData.py  prettyprint.py  world.py  xg.py
src/: NACE.jl  agent.jl  base.jl  envs.jl  rule.jl  world.jl
test/: runtests.jl
